# marimapper

./: .flake8  .gitignore  .gitmodules  .mailmap  CLAUDE.md  CODE_OF_CONDUCT.md  README.md  conftest.py  marimapper.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: l3d_workflow.yml  lint.yml  python-app.yml  test_mac.yml  test_ubuntu.yml  test_windows.yml
backends/: test_backend.py
backends/custom/: custom_backend.py
backends/fadecandy/: fadecandy_backend.py  opc.py  requirements.txt
backends/fcmega/: fcmega.py  fcmega_backend.py  requirements.txt
backends/lcm/: lcm_backend.py
backends/pixelblaze/: marimapper.js  pixelblaze_backend.py  requirements.txt  upload_map_to_pixelblaze.py
backends/wled/: requirements.txt  wled_backend.py
docs/backends/: ArtNet.md  FCMEGA.md  FadeCandy.md  PixelBlaze.md  WLED.md  custom.md
docs/highbeam_example/: example_3d_reconstruction.csv  led_map_2d_0.csv  led_map_2d_1.csv  led_map_2d_2.csv  led_map_2d_3.csv  led_map_2d_4.csv  led_map_2d_5.csv  led_map_2d_6.csv  led_map_2d_7.csv
lib/: L3D.py  camera.py  camera_map_3d.py  color_print.py  file_monitor.py  latency_controller.py  led_identifier.py  led_map.py  led_map_2d.py  led_map_3d.py  logging.py  map_cleaner.py  map_read_write.py  reconstructor.py  remesher.py  timeout_controller.py  utils.py  visualize_model.py
lib/sfm/: database.py  database_populator.py  model.py  read_write_model.py  sfm.py  visualize_model.py
marimapper/: __main__.py  camera.py  database_populator.py  detector.py  detector_fast.py  detector_process.py  file_tools.py  file_writer_process.py  generic_process.py  led.py  led_identifier.py  led_map_2d.py  led_map_3d.py  map_cleaner.py  model.py  multiprocessing_logging.py  queues.py  reconstructor.py  scanner.py  sfm.py  sfm_process.py  utils.py  visualize_model.py  visualize_process.py  window_state.py
marimapper/backends/: backend_utils.py  backend_writing_guide.md
marimapper/backends/artnet/: artnet_backend.py
marimapper/backends/custom/: custom_backend.py
marimapper/backends/dummy/: dummy_backend.py
marimapper/backends/fadecandy/: fadecandy_backend.py  fcserver-rpi  opc.py
marimapper/backends/fcmega/: fcmega.py  fcmega_backend.py
marimapper/backends/pixelblaze/: marimapper.epe  pixelblaze_backend.py  rgb.js  upload_map_to_pixelblaze.py
marimapper/backends/wled/: wled_backend.py
marimapper/pycolmap_tools/: database.py  read_write_model.py
marimapper/scripts/: arg_tools.py  basic_photogrametry_solver.py  basic_photogrammetry_solver.py  check_backend_cli.py  check_camera_cli.py  launcher.py  remesh_cli.py  results.py  results_cli.py  scanner_cli.py  upload_map_to_pixelblaze_cli.py  view_2d_map_cli.py
scripts/: camera_check.py  capture_sequence.py  check_backend.py  check_camera.py  check_latency.py  latency_check.py  reconstruct.py  remesh.py  view_2d_map.py  visualise.py
test/: camera_layout.blend  mock_camera.py  requirements.txt  test_2d_map.py  test_3d_map.py  test_backend.py  test_camera.py  test_capture_sequence.py  test_custom_backend.py  test_detector_process.py  test_latency_controller.py  test_led_functions.py  test_led_identifier.py  test_multiprocessing.py  test_reconstruction.py  test_remesh.py  test_rescale.py  test_script_import.py  test_sfm_process.py  test_timeout_controller.py  test_utils.py  utils.py
