[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "marimapper"
version = "V3.0"

dependencies = [
    "numpy<1.25.0,>=1.17.3",
    "opencv-python",
    "tqdm",
    "open3d",
    "pycolmap==0.6.1",
    "pyserial",          # required by fcmega
    "pixelblaze-client", # required by pixelblaze
    "requests"           # required by wled
]

classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

requires-python = ">=3.9,<3.12"

maintainers = [
  {name = "TheMariday"},
]
description = "This is a tool to map addressable LEDs into 2D and 3D space using only your webcam!"
readme = "README.md"
license = {file = "LICENSE"}


[project.optional-dependencies]
develop = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "flake8-bugbear"
    ]

[project.urls]
Homepage = "https://github.com/themariday/marimapper"
Documentation = "https://github.com/themariday/marimapper"
Repository = "https://github.com/themariday/marimapper.git"

[project.scripts]
marimapper = "marimapper.scripts.scanner_cli:main"
marimapper_check_camera = "marimapper.scripts.check_camera_cli:main"
marimapper_check_backend ="marimapper.scripts.check_backend_cli:main"
marimapper_upload_mapping_to_pixelblaze = "marimapper.scripts.upload_map_to_pixelblaze_cli:main"


[tool.coverage.run]
omit = [
    "*/__init__.py",
    "*/__main__.py",
    "marimapper/backends/*",
    "marimapper/scripts/*",
    "marimapper/pycolmap_tools/*"
    ]

[tool.black]
exclude = '''
(/(
    | venv
    | marimapper/backends
    | marimapper/pycolmap_tools
)/)
'''
