[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "marimapper"
version = "V3.3.0"

dependencies = [
    "numpy",
    "opencv-python",
    "tqdm",
    "open3d",
    "pycolmap==3.11.1", # 2 track is broken on > 3.12. see https://github.com/TheMariday/marimapper/issues/79
    "pyserial",          # required by fcmega
    "pixelblaze-client", # required by pixelblaze
    "requests"           # required by wled
]

classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

requires-python = ">=3.9,<3.13"

maintainers = [
  {name = "TheMariday"},
]
description = "This is a tool to map addressable LEDs into 2D and 3D space using only your webcam!"
readme = "README.md"
license = {file = "LICENSE"}


[project.optional-dependencies]
develop = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "flake8-bugbear"
    ]

[project.urls]
Homepage = "https://github.com/themariday/marimapper"
Documentation = "https://github.com/themariday/marimapper"
Repository = "https://github.com/themariday/marimapper.git"

[project.scripts]
marimapper = "marimapper.scripts.scanner_cli:main"
marimapper_check_camera = "marimapper.scripts.check_camera_cli:main"
marimapper_check_backend ="marimapper.scripts.check_backend_cli:main"
marimapper_upload_mapping_to_pixelblaze = "marimapper.scripts.upload_map_to_pixelblaze_cli:main"


[tool.coverage.run]
omit = [
    "*/__init__.py",
    "*/__main__.py",
    "marimapper/backends/*",
    "marimapper/scripts/*",
    "marimapper/pycolmap_tools/*",
    ".venv/*"
    ]

[tool.black]
exclude = '''
(/(
    | venv
    | .venv
    | marimapper/pycolmap_tools
)/)
'''
